# test-cloud-run-jobs

./: README.md  export_reqtxt.sh  pyproject.toml
app/: deploy.sh
app/src/: Dockerfile  main.py  requirements.txt
app/tests/: test_get_tables_real.py
data/: create_dummy_tables.sh
